--- a/index2.html
+++ b/index2.html
@@ -11,10 +11,10 @@
     <a href="https://bootstrapmade.com/demo/FlexStart/">
     <button type="button" class="btn btn-primary my-2">Plantilla original</button></a>
     <!--Insertar link debajo-->
-    <a href="FlexStart/index.html">
+    <a href="https://julsgax.github.io/entregaBelluccia/">
     <button type="button" class="btn btn-primary my-2">Página Home</button></a>
     <!--Insertar link debajo-->
-    <a href="FlexStart/paginadetalle.html">
+    <a href="https://julsgax.github.io/entregaBelluccia/paginadetalle.html">
     <button type="button" class="btn btn-primary my-2">Página detalle</button></a>
         
 
