--- a/index2.html
+++ b/index2.html
@@ -8,10 +8,10 @@
     <h3>Entrega Belluccia 3</h3>
     <h6>Julieta Gazzo</h6>
     <!--Insertar link debajo-->
-    <a href="https://bootstrapmade.com/demo/FlexStart/">
+    <a href="https://bootstrapmade.com/demo/FlexStart">
     <button type="button" class="btn btn-primary my-2">Plantilla original</button></a>
     <!--Insertar link debajo-->
-    <a href="https://julsgax.github.io/entregaBelluccia/">
+    <a href="https://julsgax.github.io/entregaBelluccia">
     <button type="button" class="btn btn-primary my-2">Página Home</button></a>
     <!--Insertar link debajo-->
     <a href="https://julsgax.github.io/entregaBelluccia/paginadetalle.html">
